# incident-commander

./: .dockerignore  .gitattributes  .gitignore  BLOG.md  BLOG_POST_DRAFT.md  Dockerfile  README.md  app.py  openenv.yaml  pyproject.toml  requirements.txt  start.sh
agent/: optimal_agent.py
examples/: counterfactual_evaluator.py  evaluate_policies.py  minimal_trl_training.py  trl_grpo_training.py
incident_commander/: __init__.py  causal_graph.py  client.py  incident_generator.py  models.py  reward.py  service_graph.py
incident_commander/server/: __init__.py  __main__.py  app.py  incident_environment.py
notebooks/: incident_commander_quickstart.ipynb  incident_commander_trl_grpo.ipynb
outputs/evals/: decision_quality_delta.json  policy_eval_metadata.json  policy_eval_rewards.json  policy_eval_summary.json  robustness_summary.json  tabular_policy.json  training_summary.json
outputs/evals/trl_grpo/: trl_grpo_run.json  trl_grpo_summary.json
server/: Dockerfile  requirements.txt
tests/: test_env.py
